Configure project with web awesome, pnpm and tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,27 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="keywords" content="Zuzki, Sleepy Zuzki, Vtuber, Developer"/>
+  <meta name="description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
+     Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas."/>
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:creator" content="Sleepy Zuzki"/>
+  <meta name="twitter:site" content="@zuzkidev"/>
+  <meta property="og:url" content="https://www.zuzki.dev"/>
+  <meta property="og:title" content="Proyectos Zuzki"/>
+  <meta property="og:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
+     Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas."/>
+  <meta property="og:image" content="https://assets.zuzki.dev/twitter_card_img.jpg"/>
+  <meta property="og:type" content="website"/>
   <title>NgSleepyZuzki</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://early.webawesome.com/webawesome@3.0.0-alpha.9/dist/styles/themes/default.css"/>
+  <script type="module" src="https://early.webawesome.com/webawesome@3.0.0-alpha.9/dist/webawesome.loader.js"></script>
+  <script src="https://kit.fontawesome.com/15d5a6a4b5.js" data-fa-kit-code="15d5a6a4b5"></script>
 </head>
 <body>
   <app-root></app-root>
