--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
+  <meta name="title" content="Zuzki Dev"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="keywords" content="Zuzki, Sleepy Zuzki, Vtuber, Developer"/>
   <meta name="description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
      Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas."/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:creator" content="Sleepy Zuzki"/>
-  <meta name="twitter:site" content="@zuzkidev"/>
+  <meta name="twitter:site" content="@sleepy_zuzki"/>
   <meta property="og:url" content="https://www.zuzki.dev"/>
   <meta property="og:title" content="Proyectos Zuzki"/>
   <meta property="og:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
