update meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:creator" content="Sleepy Zuzki"/>
   <meta name="twitter:site" content="@sleepy_zuzki"/>
+  <meta name="twitter:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg"/>
   <meta property="og:url" content="https://www.zuzki.dev"/>
   <meta property="og:title" content="Proyectos Zuzki"/>
   <meta property="og:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
