--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,12 @@
   <meta name="description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
      Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas."/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:creator" content="Sleepy Zuzki"/>
+  <meta name="twitter:title" content="Proyectos Zuzki"/>
+  <meta name="twitter:creator" content="@sleepy_zuzki"/>
   <meta name="twitter:site" content="@sleepy_zuzki"/>
   <meta name="twitter:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg"/>
+  <meta name="twitter:image:alt" content="Zuzki's face"/>
+  <meta name="twitter:domain" content="zuzki.dev"/>
   <meta property="og:url" content="https://www.zuzki.dev"/>
   <meta property="og:title" content="Proyectos Zuzki"/>
   <meta property="og:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
