--- a/src/index.html
+++ b/src/index.html
@@ -2,25 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="title" content="Zuzki Dev"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="keywords" content="Zuzki, Sleepy Zuzki, Vtuber, Developer"/>
+
+  <!-- SEO -->
+  <meta name="title" content="Zuzki Dev">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Zuzki, Sleepy Zuzki, Vtuber, Developer">
+  <meta name="canonical" content="https://zuzki.dev">
   <meta name="description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
-     Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas."/>
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Proyectos Zuzki"/>
-  <meta name="twitter:creator" content="@sleepy_zuzki"/>
-  <meta name="twitter:site" content="@sleepy_zuzki"/>
-  <meta name="twitter:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg"/>
-  <meta name="twitter:image:alt" content="Zuzki's face"/>
-  <meta name="twitter:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales. Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas."/>
-  <meta name="twitter:url" content="https://www.zuzki.dev"/>
-  <meta property="og:url" content="https://www.zuzki.dev"/>
-  <meta property="og:title" content="Proyectos Zuzki"/>
+     Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas.">
+
+  <!-- TWITTER CARD TAGS -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="zuzki.dev">
+  <meta property="twitter:url" content="https://zuzki.dev">
+  <meta name="twitter:title" content="Proyectos de Zuzki">
+  <meta name="twitter:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
+     Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas.">
+  <meta name="twitter:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg">
+  <meta name="twitter:image:alt" content="Zuzki's page">
+  <meta name="twitter:creator" content="@sleepy_zuzki">
+  <meta name="twitter:site" content="@sleepy_zuzki">
+
+  <!-- FACEBOOK TAGS -->
+  <meta property="og:url" content="https://zuzki.dev">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Proyectos de Zuzki">
   <meta property="og:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
-     Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas."/>
-  <meta property="og:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg"/>
-  <meta property="og:type" content="website"/>
+     Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas.">
+  <meta property="og:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg">
+
+  <!-- ROBOTS -->
+  <meta name="robots" content="index, follow, notranslate">
+  <meta name="theme-color" content="#FBBF24FF">
+  <meta name="googlebot" content="index, follow">
+  <meta name="google" content="nositelinkssearchbox">
+  <meta name="google" content="notranslate">
+
   <title>Sleepy Zuzki</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
