--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta name="twitter:title" content="Proyectos de Zuzki">
   <meta name="twitter:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
      Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas.">
-  <meta name="twitter:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg">
+  <meta name="twitter:image" content="https://pub-cbd333d51b0a48599a5f7d1530a1e899.r2.dev/large_zuzki_christmas_c4ace767dc.jpg">
   <meta name="twitter:image:alt" content="Zuzki's page">
   <meta name="twitter:creator" content="@sleepy_zuzki">
   <meta name="twitter:site" content="@sleepy_zuzki">
@@ -29,7 +29,7 @@
   <meta property="og:title" content="Proyectos de Zuzki">
   <meta property="og:description" content="Desarrollador apasionado por la creación de aplicaciones web innovadoras y funcionales.
      Actualmente, aprendiendo a diseñar interfaces para transmisiones en vivo, combinando creatividad y tecnología para ofrecer soluciones únicas.">
-  <meta property="og:image" content="https://assets.zuzki.dev/large_zuzki_christmas_c4ace767dc.jpg">
+  <meta property="og:image" content="https://pub-cbd333d51b0a48599a5f7d1530a1e899.r2.dev/large_zuzki_christmas_c4ace767dc.jpg">
 
   <!-- ROBOTS -->
   <meta name="robots" content="index, follow, notranslate">
