Update UI components for performance and accessibility improvements
This commit focuses on optimizing image loading for performance, updating styles for cleaner design, and improving compatibility with Angular features. Additionally, redundant CSS was removed for cleaner code organization.

---

# [ResponsiveImgComponent]

- Optimized image loading by changing `loading` attribute to `eager` and adding `fetchpriority` as `high`.
  - Enhanced image loading behavior to prioritize important visuals.
  - Slimmed down `sizes` attribute for better resource management.

# [ContactFormComponent]

- Introduced `CUSTOM_ELEMENTS_SCHEMA` for enhanced interoperability.
  - Ensured compatibility with custom elements using predefined schemas.

# [HomeFeature]

- Replaced custom components with native optimized Angular directives.
  - Integrated `NgOptimizedImage` to benefit from default Angular performance tooling.

# [AppConfig]

- Added `provideCloudflareLoader` for better resource loading from the Cloudflare CDN.
  - Updated configurations for performance-aware external image loading.

# [HomeFeatureHtml]

- Refactored image implementation to leverage Angular's optimized image directive.
  - Improved alt text clarity for accessibility compliance.

# [IndexHtml]

- Preconnected with the CDN to streamline initial image and resource fetching.

# [ProjectCardComponent]

- Adjusted `ngSrc` path for consistent image path formatting.
  - Cleaned button text appearance by removing unnecessary dark mode styling.

# [ButtonComponent]

- Removed redundant span wrappers for cleaner DOM output.
  - Improved button styling for better visual consistency.

# [AppComponentCss]

- Removed unused and redundant CSS related to links and card animations.
  - Simplified styles by dropping components no longer in use.

Signed-off-by: Zuzki <sleepy@zuzki.dev>

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
   <title>Sleepy Zuzki</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://zuzki.dev" rel="preconnect">
 </head>
 <body>
   <app-root></app-root>
